# AIchallenge2

./: .gitignore  README.md  introduction.md  mmr.py  rule.md  rule_new.md  update.md  规则手册.md
logic/: clear.py  config.ini  design.md  for_interface.md  for_platform.md  gamemain.py  main.py  readme.md  readme_interface.md  readme_platform.md  todo.md
logic/allclass/: __init__.py  character.py  circle.py  data.ini  equipment.py  info.py  item.py  object.py  position.py  prop.py  readme.md  sound.py  terrain.py  vision.py
logic/data/: character.json  circle.json  item.json  map.json  parameter.json  readme.md  sound.json
logic/debug/: 20190201_17'41'56.pb  20190202_20'11'57.pb  ai.py  filter.py  input.json  input.txt  out.txt  out2.txt  output.py  readme.md  test.py
logic/playback/: .gitignore
logic/proto/: communication_player.proto  communication_player_pb2.py  interface.proto  interface_pb2.py  logic.proto  logic_pb2.py  platform.proto  platform_pb2.py  readme.md
logic/sheet/: convert.py  data.xlsx  readme.md
logo/: logo.psd
platform/: API.md  CMakeLists.txt  readme.md
platform-linux-1.0/: CMakeLists.txt  GameLogic.py  README.md
platform-linux-1.0/include/: CDemands.h  CState.h  Header.h  PyCalling.h  ThreadControl.h  player.h  playerAPI.h
platform-linux-1.0/src/: CDemands.cpp  CState.cpp  PyCalling.cpp  ThreadControl.cpp  main.cpp  player.cpp  playerAPI.cpp
platform/include/: api.h  character.h  communication_platform.pb.h  constant.h  obj.h  platform.h  pycalling.h  sound.h  vision.h
platform/linux/: CMakeLists.txt
platform/linux-only/include/: comm_block.h  command.pb.h  controller.h  info.pb.h
platform/linux-only/src/: comm_block.cpp  command.pb.cc  controller.cpp  info.pb.cc  main.cpp
platform/linux/include/: character.h  item.h  multiprocess.h  obj.h  pycalling.h
platform/linux/src/: character.cpp  item.cpp  main.cpp  multiprocess.cpp  object.cpp  pycalling.cpp
platform/player-only/: CMakeLists.txt
platform/player-only/AI/include/: playerAI.h
platform/player-only/AI/src/: playerAI.cpp
platform/player-only/include/: api.h  base.h  communication_player.pb.h  constant.h  data.h  player.h  playerAI.h
platform/player-only/src/: api.cpp  base.cpp  communication_player.pb.cc  player.cpp  playerAI.cpp
platform/proto/: CMakeLists.txt  comm.proto  command.proto  communication_platform.proto  communication_player.proto  info.proto
platform/pyscript/: clear.py  const.py  constant.py  py2pyc.py  run.py
platform/shell/: complie.sh  dependence.sh  runall.sh
platform/src/: api.cpp  character.cpp  communication_platform.pb.cc  main.cpp  obj.cpp  pycalling.cpp  sound.cpp  vision.cpp
platform/win-only/include/: controller.h  platform.h
platform/win-only/player-project/: AI.sln  AI.vcxproj  AI.vcxproj.filters  API.md  README.MD  api.cpp  api.h  base.cpp  base.h  comm.pb.h  constant.h  player.cpp
platform/win-only/player-project/comm/: comm.exp  comm.lib  libprotobuf.lib
platform/win-only/src/: controller.cpp  main.cpp
resource/: readme.md
